--- a/microservices/sample-service/build.gradle
+++ b/microservices/sample-service/build.gradle
@@ -16,7 +16,10 @@ dependencies {
 	compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:${cloud_netflix_version}")
 	
 	compile project(':commons:rest')
-	
+	compile 'org.yaml:snakeyaml:1.16'
+	compile (group: 'org.liquibase', name: 'liquibase-core', version: liquibase_core_version) {
+		exclude(module: 'jetty-servlet')
+	}
 	compile group: 'commons-io', name: 'commons-io', version: commons_io_version
 	compile group: 'javax.inject', name: 'javax.inject', version: javax_inject_version
 	compile group: 'javax.transaction', name: 'javax.transaction-api'
@@ -31,7 +34,7 @@ dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-loader-tools'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-logging'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '1.2.6.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 	compile(group: 'org.springframework.boot', name: 'spring-boot-starter-web') { exclude module: 'spring-boot-starter-tomcat' }
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-spring-service-connector'
