--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ subprojects {
 	sourceCompatibility=1.8
 	targetCompatibility=1.8
 	repositories {
+		mavenLocal()
 		maven { url 'http://repo.spring.io/milestone' }
 		maven { url 'http://repo.spring.io/snapshot' }
 		maven { url 'https://repository.jboss.org/nexus/content/repositories/releases' }
