--- a/commons/rest/build.gradle
+++ b/commons/rest/build.gradle
@@ -25,4 +25,18 @@ dependencies {
 		exclude(module: 'metrics-core')
 	    exclude(module: 'metrics-healthchecks')
 	}
+	
+	//swagger
+	compile 'org.scala-lang:scala-library:2.11.7'
+	
+	compile 'org.springframework.plugin:spring-plugin-core:1.1.0.RELEASE'
+	compile 'org.scala-lang.modules:scala-xml_2.11:1.0.2'
+	compile 'com.fasterxml.jackson.module:jackson-module-scala_2.11:2.4.3'
+	compile("com.mangofactory:swagger-springmvc:0.9.1") {
+		exclude group: "cglib"
+		exclude group: "com.fasterxml.jackson.module"
+		exclude group: "javax.ws.rs"
+		exclude group: "org.scala-lang"
+		
+	}
 }
