--- a/microservices/sample-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/microservices/sample-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -23,16 +23,19 @@ databaseChangeLog:
                   type: varchar(255)
                   constraints:
                     nullable: false
-#  - changeSet:
-#      id: 2
-#      author: marceloverdijk
-#      changes:
-#        - insert:
-#            tableName: person
-#            columns:
-#              - column:
-#                  name: first_name
-#                  value: Marcel
+  - changeSet:
+      id: 2
+      author: marceloverdijk
+      changes:
+        - addColumn:
+            tableName: person
+            columns:
+              - column:
+                  name: deleted
+                  type: boolean
+                  defaultValue: false
+                  constraints:
+                    nullable: false
 #              - column:
 #                  name: last_name
 #                  value: Overdijk
