--- a/microservices/sample-service/build.gradle
+++ b/microservices/sample-service/build.gradle
@@ -34,7 +34,11 @@ dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-loader-tools'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-logging'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '1.2.6.RELEASE'
+	compile (group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '1.2.6.RELEASE') {
+		exclude module: 'spring-data-jpa'
+	}
+	compile 'org.springframework.data:spring-data-jpa:1.9.0.RELEASE'
+
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 	compile(group: 'org.springframework.boot', name: 'spring-boot-starter-web') { exclude module: 'spring-boot-starter-tomcat' }
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-spring-service-connector'
