--- a/microservices/support/discovery-service/build.gradle
+++ b/microservices/support/discovery-service/build.gradle
@@ -8,6 +8,7 @@ springBoot {
 }
 
 dependencies {
+//	compile project(':microservices:support:discovery-service:auth-discovery-service')
 	compile("org.springframework.boot:spring-boot-starter-web:${spring_boot_version}") {
 		exclude module: 'spring-boot-starter-tomcat'
 	}
