--- a/microservices/support/edge-service/src/main/resources/application.yml
+++ b/microservices/support/edge-service/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+management.security.enabled: true
+security.basic.enabled: false
 info:
   component: Zuul Server
   
@@ -18,6 +20,15 @@ zuul:
     ui:
       path: /ui/**
       serviceId: frontend
+    test:
+      path: /testopenam/**
+      serviceId: testopenam
+      stripPrefix: true
+    test2:
+      path: /test2/**
+      url: http://localhost:8765/test
+      stripPrefix: true
+      
 
 server:
   port: 8765
