--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'scaffold'
 
 include ':microservices:support',
 		':microservices:support:discovery-service',
+		':microservices:support:discovery-service:auth-discovery-service',
 		':microservices:support:config-service',
 		':microservices:support:monitoring-service',
 		':microservices:support:turbine-service',
